--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h2>Origami's</h2>
-        <a href="Origami.html"> Projects </a>
+        <a href="origami.html"> Origami's </a>
         <a href="aboutStudio.html">About Me</a>
     </body>
 </html>
